applications/mlflow/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
spec:
  rules:
  - host: mlflow-tracking-server.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mlflow-tracking-server
              port: 
                number: 5000
